--- a/exercise/style.css
+++ b/exercise/style.css
@@ -17,7 +17,6 @@ h1 {
 
 .example1 {
   border: 10px solid #afa6ca;
-  height: 70px;
   margin: 0;
   padding: 0;
 }
@@ -57,7 +56,7 @@ Code goes here: */
 .example1 {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  /*align-items: center;*/
 }
 
 .home {
@@ -73,7 +72,6 @@ Code goes here: */
  .example2 {
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
   justify-content: center;
 }
 
