--- a/exercise/style.css
+++ b/exercise/style.css
@@ -72,6 +72,7 @@ Code goes here: */
  .example2 {
   display: flex;
   flex-flow: column nowrap;
+  align-items: center;
   justify-content: center;
 }
 
